# Alya-Bot-Telegram

./: .dockerignore  .env.example  .gitignore  COMMANDS.MD  COMMANDS.md  DATABASE_SETUP.md  Dockerfile  INSTALL.md  LICENSE  README.md  debug_rvc_import.py  docker-compose.yml  init_database.py  main.py  migrate_db.py  pyproject.toml  requirements.txt  run.py  test_vp_init.py
.github/: copilot-instructions.md  copilot-refactor-yaml.md
config/: __init__.py  help_text.py  logging_config.py  persona_config.yaml  responses.yaml  roasts.yaml  settings.py
core/: __init__.py  bot.py  database.py  emotion_system.py  gemini_client.py  handler_registry.py  intent.py  language_manager.py  llm_factory.py  memory.py  models.py  mood_manager.py  nlp.py  persona.py  personas.py  roleplay_actions.py  search_engine.py  self_client.py  sticker_manager.py
database/: __init__.py  context_queue.py  database.py  database_manager.py  fix_schema.py  memory_manager.py  memory_retrieval.py  migrate_add_mood.py  migrate_add_voice_enabled.py  migrate_add_voice_language.py  models.py  schema_manager.py  session.py
docs/: SETUP.md
handlers/: __init__.py  admin.py  admin_handlers.py  callback_handlers.py  command_handlers.py  commands.py  conversation.py  dev_handlers.py  document_handlers.py  language.py  media_handlers.py  media_interface.py  message_handlers.py  persona_handlers.py  ping_handlers.py  roast_handlers.py  trace_handlers.py  voice.py
personas/: alya.yaml
scripts/: init_database.py  test_components.py
tests/: conftest.py  test_entities.py  test_persona.py
utils/: __init__.py  affection_helper.py  analysis_formatter.py  analyze.py  cache_manager.py  commands.py  config_loader.py  context_manager.py  database.py  fact_extractor.py  faq_loader.py  formatters.py  google_lens.py  helpers.py  image_helper.py  image_utils.py  language_handler.py  language_translator.py  media_interface.py  media_utils.py  model_downloader.py  natural_parser.py  query_processor.py  rate_limiter.py  resource_monitor.py  responses.py  roast.py  russian_translator.py  rvc_handler.py  saucenao.py  search_engine.py  system_info.py  task_manager.py  tts_queue.py  (+8 more)
(+63 files in other folders)
